internal/testdata/sdk/error/fixtures/untyped_error.go
// This file was auto-generated by Fern from our API Definition.

package api

import (
	core "github.com/fern-api/fern-go/internal/testdata/sdk/error/fixtures/core"
)

type UntypedError struct {
	*core.APIError
}

func (u *UntypedError) UnmarshalJSON(data []byte) error {
	u.StatusCode = 400
	return nil
}

func (u *UntypedError) MarshalJSON() ([]byte, error) {
	return nil, nil
}
